fix: Fixed cart dropdown being overlapped

--- a/src/components/navigation-bar/navigation-bar.styles.scss
+++ b/src/components/navigation-bar/navigation-bar.styles.scss
@@ -1,6 +1,7 @@
 .navigation {
     height: 100px;
     padding: 16px;
+    z-index: 999;
 
     &__logo {
         display: block;
